<?xml version="1.0" encoding="utf-8"?>
<!-- Archivo: nav_graph.xml - Grafo de navegación principal de la aplicación -->
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <!-- Fragmento de pantalla de inicio -->
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.recetarioapp.ui.home.FragmentHome"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home" />

    <!-- Fragmento de listado de recetas -->
    <fragment
        android:id="@+id/recipesFragment"
        android:name="com.example.recetarioapp.ui.recipes.RecipesFragment"
        android:label="@string/nav_recipes"
        tools:layout="@layout/fragment_recipes" />

    <!-- Fragmento para agregar nuevas recetas -->
    <fragment
        android:id="@+id/addRecipeFragment"
        android:name="com.example.recetarioapp.ui.add.AddRecetasFragment"
        android:label="@string/nav_add"
        tools:layout="@layout/fragment_add_recetas" />

    <!-- Fragmento de recetas favoritas -->
    <fragment
        android:id="@+id/favoritesFragment"
        android:name="com.example.recetarioapp.ui.favs.FavsFragment"
        android:label="@string/nav_favs"
        tools:layout="@layout/fragment_favs" />

</navigation>